--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,10 @@ jobs:
   publish-private-create:
     uses: ForesightMiningSoftwareCorporation/github/.github/workflows/publish-rust-crate.yml@v1.0.0
     with:
-      private-registry-host: https://github.com/rust-lang/crates.io.git
-      private-registry-name: public
-      private-registry-http: true
+      public-registry: true
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
-      private-registry-token: ${{ secrets.CARGO_PUBLIC_REGISTRY_TOKEN }}
+      public-registry-token: ${{ secrets.CARGO_PUBLIC_REGISTRY_TOKEN }}
       discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
+      approval_app: ${{ secrets.ACTIONS_APPROVERS_APP_ID }}
+      approval_app_private_key: ${{ secrets.ACTIONS_APPROVERS_APP_PRIVATE_KEY }}
