--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ jobs:
     uses: ForesightMiningSoftwareCorporation/github/.github/workflows/publish-rust-crate.yml@v1.0.0
     with:
       public-registry: true
+      required_packages: libasound2-dev
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
       public-registry-token: ${{ secrets.CARGO_PUBLIC_REGISTRY_TOKEN }}
